fix gap and margin, delete mobile bottom ticker

--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,10 @@ body {
   column-gap: 60px;
 }
 
+.plug__ticker--desktop {
+  display: none;
+}
+
 @media (max-width: 991px) {
   .plug__main {
     column-gap: 70px;
@@ -196,16 +200,16 @@ body {
 
   .plug__main {
     flex-direction: column;
-    row-gap: 50px;
+    row-gap: 20px;
   }
 
   .plug__logo {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     row-gap: 120px;
     align-items: center;
-    padding: 0 40px;
+    padding: 150px 40px 20px;
   }
 
   .plug__logo-img {
@@ -223,8 +227,8 @@ body {
 
   .plug__info {
     height: 100%;
-    justify-content: flex-start;
-    padding: 50px 0 0;
+    justify-content: space-around;
+    /* margin-top: -120px; */
   }
 
   .plug__socials--desktop {
@@ -238,7 +242,6 @@ body {
   .plug__socials--tel {
     display: flex;
     margin-top: 100px;
-    margin-bottom: 100px;
   }
 
 
